--- a/bower.json
+++ b/bower.json
@@ -19,9 +19,10 @@
     "angular-ui-router": "^1.0.3",
     "bootstrap-css": "^3.3.7",
     "angular-jquery": "^0.2.1",
-    "angular-modal-service": "^0.11.1"
+    "angular-modal-service": "^0.11.1",
+    "font-awesome": "fontawesome#^4.7.0"
   },
-  "resolutions":{
+  "resolutions": {
     "angular": "1.6.4"
   }
 }
