--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "bootstrap-css": "^3.3.7",
     "angular-jquery": "^0.2.1",
     "angular-modal-service": "^0.11.1",
-    "font-awesome": "fontawesome#^4.7.0"
+    "font-awesome": "fontawesome#^4.7.0",
+    "angular-toastr": "^2.1.1"
   },
   "resolutions": {
     "angular": "1.6.4"
